MyDev/src/objects/StrikeIronInfo__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only one record should be active at a time</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>the password registered with StrikeIron</inlineHelpText>
        <label>Password</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userID__c</fullName>
        <inlineHelpText>the email address registered with StrikeIron</inlineHelpText>
        <label>User ID</label>
        <type>Email</type>
    </fields>
    <label>StrikeIronInfo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{00}</displayFormat>
        <label>StrikeIronInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StrikeIronInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>